--- a/main.css
+++ b/main.css
@@ -1,4 +1,87 @@
 body {
-	font-size: 0.8em;
-	font-family: arial, sans-serif;
+	font-family: 'Coustard', serif;
+    font-size: 15px;
+    background-color: black;
+}
+h1 {
+    padding-top: 75px;
+    font-family: 'Coustard', serif;
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-align: center;
+    color: white;
+}
+
+p {
+    padding-top: 75px;
+    font-family: 'Coustard', serif;
+    font-size: 20px;   
+    letter-spacing: 1px;
+    text-align: left;
+    color: white;
+    padding-left: 30%;
+    padding-right: 30%;
+}
+
+
+.header h1 {
+  font-size: 50px;
+  font-family: 'Gloria Hallelujah', cursive;
+  letter-spacing: 3px;
+  color: white;
+  background-color: black;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.header h2 {
+  font-size: 30px;
+  font-family: 'Gloria Hallelujah', cursive;
+  letter-spacing: 3px;
+  color: white;
+  background-color: black;
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: sticky;
+  top: 0;
+  border-bottom: 2px solid #2F4F4F;
+  border-top: 2px solid #2F4F4F;
+}
+
+li {
+  padding-left: 50px;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 15px 3px;
+  text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: underline;
+}
+
+.active {
+    text-decoration: underline;
+}
+
+.footer {
+  background-color: black;
+  padding-top: 100px;
+  padding-left: 35px;
+  padding-bottom: 20px;
+  text-align: left;
+  color: white;
 }
