--- a/main.css
+++ b/main.css
@@ -3,8 +3,15 @@ body {
     font-size: 15px;
     background-color: black;
 }
+
 h1 {
-    padding-top: 75px;
+    letter-spacing: 2px;
+    text-align: center;
+    color: white;
+}
+
+h3 {
+    padding: 60px;
     font-family: 'Coustard', serif;
     font-size: 30px;
     letter-spacing: 2px;
@@ -13,35 +20,21 @@ h1 {
 }
 
 p {
-    padding-top: 75px;
     font-family: 'Coustard', serif;
     font-size: 20px;   
-    letter-spacing: 1px;
-    text-align: left;
+    letter-spacing: 1px;    
     color: white;
-    padding-left: 30%;
-    padding-right: 30%;
 }
 
 
-.header h1 {
-  font-size: 50px;
+.header {
+  font-size: 25px;
   font-family: 'Gloria Hallelujah', cursive;
   letter-spacing: 3px;
   color: white;
   background-color: black;
   text-align: center;
-  padding-top: 50px;
-}
-
-.header h2 {
-  font-size: 30px;
-  font-family: 'Gloria Hallelujah', cursive;
-  letter-spacing: 3px;
-  color: white;
-  background-color: black;
-  text-align: center;
-  padding-bottom: 25px;
+  padding: 40px;
 }
 
 ul {
@@ -85,3 +78,45 @@ li a:hover {
   text-align: left;
   color: white;
 }
+
+.justify {
+	text-align: justify;
+	text-justify: inter-word;
+	width: 80%;
+	padding-left: 10%;
+}
+
+.justify2 {
+	text-align: justify;
+	text-justify: inter-word;
+	width: 80%;
+}
+
+.column {
+	float: left;
+	width: 50%;
+}
+
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.image {
+    max-width:80%;
+	max-height:80%;
+    padding-top: 4%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.image2 {
+    max-width:80%;
+	max-height:80%;
+    padding-top: 4%;
+    padding-left: 15%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
